5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1745_1529.log
== TEST (2019-05-15 14:45:21) 
-- CODE:
q1 = int(input("infantaria: "))
q2 = int(input("cavalaria: "))
p1 = float(input("infantaria: "))
p2 = float(input("cavalaria: "))


-- OUTPUT:
1.41194496
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:49:23) 
-- CODE:
q1 = int(input("infantaria: "))
q2 = int(input("cavalaria: "))
p1 = float(input("infantaria: "))
p2 = float(input("cavalaria: "))

quantos meses = ?
meses = 50000

while (meses == 50000)
		meses = meses + 1
	if(meses >= 0)
print()


-- ERROR:
File "XXXX", line 6
    quantos meses = ?
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:49:30) 
-- CODE:
q1 = int(input("infantaria: "))
q2 = int(input("cavalaria: "))
p1 = float(input("infantaria: "))
p2 = float(input("cavalaria: "))

meses = 50000

while (meses == 50000)
		meses = meses + 1
	if(meses >= 0)
print()


-- ERROR:
File "XXXX", line 8
    while (meses == 50000)
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:49:46) 
-- CODE:
q1 = int(input("infantaria: "))
q2 = int(input("cavalaria: "))
p1 = float(input("infantaria: "))
p2 = float(input("cavalaria: "))

meses = 50000

while (x == 50000)
		meses = meses + 1
	if(meses >= 0)
print()


-- ERROR:
File "XXXX", line 8
    while (x == 50000)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:49:51) 
-- CODE:
q1 = int(input("infantaria: "))
q2 = int(input("cavalaria: "))
p1 = float(input("infantaria: "))
p2 = float(input("cavalaria: "))

meses = 50000

while (x >= 50000)
		meses = meses + 1
	if(meses >= 0)
print()


-- ERROR:
File "XXXX", line 8
    while (x >= 50000)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:49:53) 
-- CODE:
q1 = int(input("infantaria: "))
q2 = int(input("cavalaria: "))
p1 = float(input("infantaria: "))
p2 = float(input("cavalaria: "))

meses = 50000

while (x >= 50000)
		meses = meses + 1
	if(meses >= 0)
print()


-- ERROR:
File "XXXX", line 8
    while (x >= 50000)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:01) 
-- CODE:
q1 = int(input("infantaria: "))
q2 = int(input("cavalaria: "))
p1 = float(input("infantaria: "))
p2 = float(input("cavalaria: "))

meses = 50000

while ()
		meses = meses + 1
	if(meses >= 0)
print()


-- ERROR:
File "XXXX", line 8
    while ()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:15) 
-- CODE:
q1 = int(input("infantaria: "))
q2 = int(input("cavalaria: "))
p1 = float(input("infantaria: "))
p2 = float(input("cavalaria: "))

meses = 50000

	if(meses >= 0)
print()


-- ERROR:
File "XXXX", line 8
    if(meses >= 0)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:27) 
-- CODE:
q1 = int(input("infantaria: "))
q2 = int(input("cavalaria: "))
p1 = float(input("infantaria: "))
p2 = float(input("cavalaria: "))

meses = 50000
	if(meses >= 0)
print()


-- ERROR:
File "XXXX", line 7
    if(meses >= 0)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:41) 
-- CODE:
q1 = int(input("infantaria: "))
q2 = int(input("cavalaria: "))
p1 = float(input("infantaria: "))
p2 = float(input("cavalaria: "))

quant = 50000
	if(meses >= 0)
print()


-- ERROR:
File "XXXX", line 7
    if(meses >= 0)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 14:50:47) 
-- CODE:
q1 = int(input("infantaria: "))
q2 = int(input("cavalaria: "))
p1 = float(input("infantaria: "))
p2 = float(input("cavalaria: "))

quant = 50000
	if(meses > 0)
print()


-- ERROR:
File "XXXX", line 7
    if(meses > 0)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:08:59) 
-- CODE:
q1 = int(input("infantaria: "))
q2 = int(input("cavalaria: "))
p1 = float(input("infantaria: "))
p2 = float(input("cavalaria: "))

quant = 50000
	if(m > 0)
print()


-- ERROR:
File "XXXX", line 7
    if(m > 0)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:13:50) 
-- CODE:
q1 = int(input("infantaria: "))
q2 = int(input("cavalaria: "))
p1 = float(input("infantaria: "))
p2 = float(input("cavalaria: "))

quant = 50000
	if(m > 0):
print()


-- ERROR:
File "XXXX", line 7
    if(m > 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:14:18) 
-- CODE:
q1 = int(input("infantaria: "))
q2 = int(input("cavalaria: "))
p1 = float(input("infantaria: "))
p2 = float(input("cavalaria: "))

quant = 50000
	if(m > 0):
print("quantos meses")
	else("meses")


-- ERROR:
File "XXXX", line 7
    if(m > 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:14:29) 
-- CODE:
q1 = int(input("infantaria: "))
q2 = int(input("cavalaria: "))
p1 = float(input("infantaria: "))
p2 = float(input("cavalaria: "))

quant = 50000
	if(p > 0):
print("quantos meses")
	else("meses")


-- ERROR:
File "XXXX", line 7
    if(p > 0):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
